--- a/frontendSIGUI/src/app/components/angular-components/user-zone/user-zone.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/user-zone/user-zone.component.html
@@ -2,7 +2,7 @@
     <div id='div_Content_Register' class="content_body"> 
       <div class="inner_elements">
         <img [src]="imgCorLogo" class="logo_content" width="300" height="95">
-        <h5 class="text_content"> Sistema de Informações Geograficas Urbanas de Infraestrutura</h5>
+        <h5 class="leg_content"style="color: aliceblue;"> Sistema de Informações Geograficas Urbanas de Infraestrutura</h5>
       </div>
     </div>
   </div>
