--- a/frontendSIGUI/src/app/components/maps-components/manager-estructure/manager-estructure.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/manager-estructure/manager-estructure.component.html
@@ -13,13 +13,13 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Identificação da Equipamento</mat-label>
-                        <input matInput placeholder="Input" formControlName="eq_co_cod">
+                        <input type="number" matInput placeholder="Input" formControlName="eq_co_cod">
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Primeiro Nome do Equipamento</mat-label>
-                        <input matInput placeholder="Input" formControlName="eq_co_first_name">
+                        <input type="text" matInput placeholder="Input" formControlName="eq_co_first_name">
                     </mat-form-field>
                 </div>
             </div>
@@ -27,13 +27,13 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Nome no Mapa</mat-label>
-                        <input matInput placeholder="Input" formControlName="eq_co_name_map">
+                        <input type="text" matInput placeholder="Input" formControlName="eq_co_name_map">
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Nome </mat-label>
-                        <input matInput placeholder="Input" formControlName="eq_co_name">
+                        <input type="text" matInput placeholder="Input" formControlName="eq_co_name">
                     </mat-form-field>
                 </div>
             </div>
@@ -41,13 +41,13 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Nome Completo</mat-label>
-                        <input matInput placeholder="Input" formControlName="eq_co_name_complete">
+                        <input type="text" matInput placeholder="Input" formControlName="eq_co_name_complete">
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Nome type</mat-label>
-                        <input matInput placeholder="Input" formControlName="eq_co_type">
+                        <input type="text" matInput placeholder="Input" formControlName="eq_co_type">
                     </mat-form-field>
                 </div>
             </div>
