--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup/popup-options/popup-options.component.css
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup/popup-options/popup-options.component.css
@@ -36,9 +36,9 @@
     top: 2px;
     right: 8px;
   }
-  .ol-popup-closer:after {
+  /* .ol-popup-closer:after {
     content: "✖";
-  }
+  } */
   .ol-popup-content{
     float: left;
   }
