--- a/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.html
@@ -8,9 +8,9 @@
     <div class="teste" >
         <app-popup-options  [map]="map" ></app-popup-options>         
     </div>
-    <app-layer-switcher [map]="map"> </app-layer-switcher>
+    <!-- <app-layer-switcher [map]="map"> </app-layer-switcher> -->
 </div>
 <div class="inner-elements-map-container">
-    <app-scaleline class="scaline" [map]="map"></app-scaleline>
-    <app-mouse-position [map]="map"></app-mouse-position>
+    <!-- <app-scaleline class="scaline" [map]="map"></app-scaleline>
+    <app-mouse-position [map]="map"></app-mouse-position> -->
 </div>
