--- a/frontendSIGUI/src/app/components/maps-components/infrastructure-network/infrastructure-network.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/infrastructure-network/infrastructure-network.component.html
@@ -1,17 +1,23 @@
 <form [formGroup]="infrastrutureForm" (ngSubmit)="onSubmit()"> 
     <mat-card>
         <mat-card-title>Associar a uma Rede</mat-card-title>
-        <mat-card-subtitle>Selecione um Shapfile</mat-card-subtitle>
+        <mat-card-subtitle>Criar uma conexão</mat-card-subtitle>
         <mat-card-content>
             <p> <label>{{labelInfra}}</label> </p>
             <p> <label>{{Associada}}</label> </p>
             <mat-form-field appearance="fill">
                 <mat-label>Serial Number</mat-label>
                 <input matInput placeholder="Input" formControlName="serial_number">
+                <span class="spanValidate" *ngIf="infrastrutureForm.controls['serial_number'].errors">
+                    Campo Obrigatorio
+                </span>
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Status</mat-label>
                 <input matInput placeholder="Input" formControlName="status">
+                <span class="spanValidate" *ngIf="infrastrutureForm.controls['status'].errors">
+                    Campo Obrigatorio
+                </span>
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Selecionar Network</mat-label>
@@ -20,12 +26,15 @@
                         {{network.net_name}}
                     </mat-option>
                 </mat-select>
+                <span class="spanValidate" *ngIf="infrastrutureForm.controls['selectNetwork'].errors">
+                    Campo Obrigatorio
+                </span>
             </mat-form-field>
 
         </mat-card-content>
         <mat-card-actions align="end">
-            <button type="submit" mat-fab color="primary">
-                <mat-icon class="white-icon">attachment</mat-icon>
+            <button type="submit" mat-fab color="primary" [disabled]="!infrastrutureForm.valid">
+                <mat-icon class="white-icon" >attachment</mat-icon>
             </button>            
         </mat-card-actions>
     </mat-card>  
