--- a/frontendSIGUI/src/app/components/maps-components/manager-street/manager-street/manager-street.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/manager-street/manager-street/manager-street.component.html
@@ -11,13 +11,17 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Identificação da Rua</mat-label>
-                        <input matInput placeholder="Input" formControlName="idStreet">
+                        <input type="number" matInput placeholder="Input" formControlName="idStreet">
+                    
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Chave da Rua</mat-label>
-                        <input matInput placeholder="Input" formControlName="codKey">
+                        <input type="text" matInput placeholder="Input" formControlName="codKey">
+                        <span class="spanValidate" *ngIf="streetForm.controls['idStreet'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
             </div>
@@ -25,13 +29,19 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Nome da Rua</mat-label>
-                        <input matInput placeholder="Input" formControlName="nameStreet">
+                        <input type="text" matInput placeholder="Input" formControlName="nameStreet">
+                        <span class="spanValidate" *ngIf="streetForm.controls['nameStreet'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Nome rua Anterior</mat-label>
-                        <input matInput placeholder="Input" formControlName="nameStreetPre">
+                        <input type="text" matInput placeholder="Input" formControlName="nameStreetPre">
+                        <span class="spanValidate" *ngIf="streetForm.controls['nameStreetPre'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
             </div>
@@ -39,13 +49,19 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>Tipo da Rua </mat-label>
-                        <input matInput placeholder="Input" formControlName="typeStreet">
+                        <input type='text' matInput placeholder="Input" formControlName="typeStreet">
+                        <span class="spanValidate" *ngIf="streetForm.controls['typeStreet'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>legislação da rua </mat-label>
-                        <input matInput placeholder="Input" formControlName="typeLegislation">
+                        <input type='text' matInput placeholder="Input" formControlName="typeLegislation">
+                        <span class="spanValidate" *ngIf="streetForm.controls['typeLegislation'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
             </div>
@@ -75,13 +91,19 @@
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>CEP </mat-label>
-                        <input matInput placeholder="Input" formControlName="zipCodeE">
+                        <input type='text' matInput placeholder="Input" formControlName="zipCodeE">
+                        <span class="spanValidate" *ngIf="streetForm.controls['zipCodeE'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
                 <div class="content-form">
                     <mat-form-field appearance="fill">
                         <mat-label>CEP</mat-label>
-                        <input matInput placeholder="Input" formControlName="zipCodeD">
+                        <input type='text' matInput placeholder="Input" formControlName="zipCodeD">
+                        <span class="spanValidate" *ngIf="streetForm.controls['zipCodeD'].errors">
+                            Campo Obrigatorio
+                        </span>
                     </mat-form-field>
                 </div>
             </div>
@@ -98,20 +120,12 @@
                 </div>
                 <div class="content-form">    
                 </div>
-            </div>
-            <div class="div-item-content-form">
-                <div class="content-form">
-                    <mat-form-field appearance="fill">
-                        <mat-label>Coordenada</mat-label>
-                        <input matInput placeholder="Input" formControlName="geometry">
-                    </mat-form-field>
-                </div>                        
-            </div>           
+            </div>        
             <div class="div-item-content-form">
                 <div class="content-form">
                 </div>
                 <div class="content-form">
-                    <button type="submit" mat-raised-button color="primary">Save Data</button>
+                    <button type="submit" [disabled]="!streetForm.valid" mat-raised-button color="primary">Save Data</button>
                 </div>
             </div>
         </div>    
